# aubypipe

./: Cargo.toml  flake.nix  readme.md
src/: lib.rs
src/platform/: unix.rs  windows.rs
