[package]
name = "aubypipe"
version = "1.0.0"
edition = "2024"

[dependencies]
heapless = "0.8.0"
pin-project = "1.1.10"
tokio = { version = "1.47.1", features = ["net"] }
uuid = { version = "1.17.0", features = ["v4", "rng"] }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
